refactor(messaging): `AbstractEventBus` remove builder